<resources>
    <string name="app_name">Weather App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temperature">%d&#176;</string>
    <string name="additional_details">Additional Weather Details</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="select_metric_system">Select unit of measurement</string>
    <string name="search_field_hint">Enter city name here</string>
    <string name="icon_url">https://openweathermap.org/img/wn/%s@4x.png</string>
    <string name="error_message">"Error fetching weather data</string>
    <string name="submit">Submit</string>
    <string name="weather_app">Weather App</string>
    <string name="feels_like">Feels like: %d&#176;</string>
    <string name="wind_speed">Wind speed: %d</string>
    <string name="humidity">Humidity: %d%%</string>
</resources>